--- a/index.html
+++ b/index.html
@@ -41,5 +41,15 @@
         })
         .catch(error => console.error("Errore nella fetch:", error));
     </script>
+    <style>
+      body {
+        background-color: #f8f9fa;
+      }
+
+      .card img {
+        max-height: 200px;
+        object-fit: cover;
+      }
+    </style>
   </body>
 </html>
